--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ pytest-selenium = "^4.1.0"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.8.1"]
 build-backend = "poetry.core.masonry.api"
